tun: add tun support (linux)
Signed-off-by: Mark Pashmfouroush <mark@markpash.me>

--- a/example_config.json
+++ b/example_config.json
@@ -7,5 +7,7 @@
   "cfon": false,
   "country": "DE",
   "scan": true,
-  "rtt": "1000ms"
+  "rtt": "1000ms",
+  "tun": false,
+  "fwmark": "0x1375"
 }
